# chess-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  imgui.ini  markings.md  run_tests.sh  test.txt
benchmarks/: README.md  aliases.txt  build.py  build.sh  build_current.sh  leaderboard.sh  run.py  run.sh  tournament.py
docs/: journal.md  leaderboard.txt  todo.md
include/: bitboard.hpp  board.hpp  constants.hpp  diagnostics.hpp  evaluation.hpp  hashes.hpp  magics.hpp  move.hpp  move_generator.hpp  move_list.hpp  piece_list.hpp  pieces.hpp  precomputed.hpp  search.hpp  searcher.hpp  square.hpp  static_exchange.hpp  transposition_table.hpp  utility.hpp
misc/: time.py
src/cli/: CMakeLists.txt  cli.hpp  commands.cpp  main.cpp  utils.hpp
src/engine/: CMakeLists.txt  board.cpp  diagnostics.cpp  evaluate.cpp  magics.cpp  move_generator.cpp  piece_list.cpp  precomputed.cpp  search.cpp  searcher.cpp  static_exchange.cpp
src/gui/: CMakeLists.txt
src/gui/src/: app.cpp  app.hpp  board_renderer.cpp  board_renderer.hpp  main.cpp  renderer.cpp  renderer.hpp
tests/: CMakeLists.txt  main.cpp  tests_fen.cpp  tests_move_gen.cpp  tests_random.cpp
